ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stamfordcenter-ingress
  namespace: stamford-center
spec:
  ingressClassName: nginx
  rules:
    - host: center.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000

    - host: center-be.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
